--- a/index.html
+++ b/index.html
@@ -472,6 +472,8 @@
                     <input type="radio"  name="ans42" value="4">
                 </span>
             </div>
+
+            <button type="button" id="assess">assess</button>
         </form>
 
         <script type="text/javascript" src="func.js"></script>
